@@ -30,7 +30,7 @@
 #define RCPP_VERSION_STRING     "1.0.14"
 
 // the current source snapshot (using four components, if a fifth is used in DESCRIPTION we ignore it)
-#define RCPP_DEV_VERSION        RcppDevVersion(1,0,14,12)
-#define RCPP_DEV_VERSION_STRING "1.0.14.12"
+#define RCPP_DEV_VERSION        RcppDevVersion(1,0,14,13)
+#define RCPP_DEV_VERSION_STRING "1.0.14.13"
 
 #endif
